bugfix jquery-ui per modale draggable

--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -1195,7 +1195,7 @@
 				function initAll(){
 					
 					$("#add-attivitaFAD-modal").draggable({
-					    handle: ".modal-header"
+						handle: ".modal-content"
 					}); 
 
 					$('input.flat').iCheck({
