--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -88,7 +88,7 @@
 		<script
 			src="../static/bootstrapSelect/js/bootstrapSelect.js"
 			th:src="@{/bootstrapSelect/js/bootstrapSelect.js}"></script>
-
+			
 		<!-- select2 -->
 		<script src="../static/gentella/js/select/select2.full.js"
 				th:src="@{/gentella/js/select/select2.full.js}"></script>
@@ -130,8 +130,8 @@
 		</th:block>
 		
 		<!-- jquery ui per modale draggable -->
-		<script src="../static/js/jquery-ui.js"
-				th:src="@{/js/jquery-ui.js}"></script>
+		<script src="../static/js/jquery-ui.min.js"
+				th:src="@{/js/jquery-ui.min.js}"></script>
 			
 		<!-- initialize the validator.js  -->
 		<script th:inline="javascript">
