--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -81,9 +81,15 @@
 		  		th:href="@{/clockpicker/css/clockpicker.css}" />
 
 		  	<!-- bootstrap-select -->
-			<link rel="stylesheet"
+ 			<link rel="stylesheet"
 				href="..static/bootstrapSelect/css/bootstrapSelect.min.css"
 				th:href="@{/bootstrapSelect/css/bootstrapSelect.min.css}" />
+				
+		 	<!-- jquery -->
+ 			<link rel="stylesheet"
+				href="..static/css/jquery-ui.min.css"
+				th:href="@{/css/jquery-ui.min.css}" />
+				
 
 			<!-- select2 -->
 			<link rel="stylesheet"
