--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -1308,7 +1308,7 @@
 				function initAll(){
 					
 					$("#add-attivitaFSC-modal").draggable({
-					    handle: ".modal-header"
+						handle: ".modal-content"
 					}); 
 					
 					$('input.flat').iCheck({
