--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -1448,7 +1448,7 @@
 				function initAll(){
 					
 					$("#add-attivitaRES-modal").draggable({
-					    handle: ".modal-header"
+					    handle: ".modal-content"
 					}); 
 
 					$('input.flat').iCheck({
