modifiche agli eventi riedizione:
-bugfix clonazione FAD e FSC per campi disabilitati
-completata riedizione FSC
-migliorie a RES

--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -1161,7 +1161,7 @@
 											<span th:text="#{label.dichiarazione_assenza_conflitto_interesse}">Dichiarazione di assenza di conflitto di interesse</span>
 											<span class="required">*</span>
 										</label>
-										<div class="model-link">
+										<div th:unless="${isRiedizione}" class="model-link">
 											<i class="fa fa-file-text"></i>
 											<a class="autocertificazione_modello" th:text="#{label.esempio_modello}" href="todo"></a>
 										</div>
