Ricerca su eventi...manca polimorfismo

--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -157,6 +157,7 @@
 									<a class="btn btn-primary pull-right" th:text="#{label.nuovo_evento_da_pfa}" data-toggle="modal" data-target=".modal-scelta-attuazione"></a>
 									<a class="btn btn-primary pull-right" th:text="#{label.creazione_evento}" data-toggle="modal" data-target=".modal-scelta-tipologia"></a>
 								</th:block>
+									<a class="btn btn-primary pull-right" th:text="#{label.cerca}" th:href="@{/evento/ricerca}"></a>
 							</div>
 						</div>
 						<div class="clearfix"></div>
