aggiunti css disabled buttons vari

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -206,7 +206,6 @@ table.datatable-responsive-eventi-riedizione thead .sorting_asc:after {
 
 .disabled-addon {
 	cursor: not-allowed !important;
-	color: #fff;
 	opacity: 0.45;
 }
 
@@ -366,6 +365,8 @@ textarea {
 
 textarea[disabled] {
 	cursor: not-allowed;
+	background: #eee;
+    border-color: #ccc;
 }
 
 .note-text {
